<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle"
                        android:padding="10dp"
                        android:src="@drawable/img_authentication"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/loginText"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-10dp"
                    android:rotation="45"
                    android:src="@drawable/square" />


                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageView_userIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/img_user"
                        android:tint="@color/white" />

                    <EditText
                        android:id="@+id/username_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageView_userIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imageView_userIcon"
                        android:background="@color/editTextBG"
                        android:hint="@string/usernameHint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textSize="@dimen/TextSize_Hint" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imageView_passwordIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/img_authentication"
                        android:tint="@color/white" />

                    <EditText
                        android:id="@+id/pass_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageView_passwordIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imageView_passwordIcon"
                        android:background="@color/editTextBG"
                        android:hint="@string/passwordHint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textSize="@dimen/TextSize_Hint" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayout3"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp">

                    <CheckBox
                        android:id="@+id/remind_me_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/remember_me_CheckBox_Text"
                        android:textColor="@color/textColor" />

                    <Button
                        android:id="@+id/forgot_password_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/transparent"
                        android:text="@string/forgot_password_Text"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="13sp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/button_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout4"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sign_in_button_Text"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/button_signin"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layerType="software"
                    android:src="@drawable/dash" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/or_login_with"
                    android:textColor="@color/textColor"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/facebook_icon_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/facebookBlue"
                        android:padding="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/img_facebook" />

                    <ImageView
                        android:id="@+id/google_icon_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/googleRed"
                        android:padding="10dp"
                        android:src="@drawable/gmail_icon" />

                </LinearLayout>

                <TextView
                    android:id="@+id/signup_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/googleRed"
                    android:layout_marginBottom="10dp"
                    android:text="Don't have an account? Sign Up" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>