<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle"
                        android:padding="10dp"
                        android:src="@drawable/img_authentication"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/signupText"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-10dp"
                    android:rotation="45"
                    android:src="@drawable/square" />


                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp">


                    <EditText
                        android:id="@+id/username_for_SignUp_ET"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignBottom="@+id/imageView_userIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imageView_userIcon"
                        android:background="@color/editTextBG"
                        android:hint="@string/usernameHint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textSize="@dimen/TextSize_Hint" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">


                    <EditText
                        android:id="@+id/full_name_for_SignUp_ET"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:background="@color/editTextBG"
                        android:hint="@string/fullNameHint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textSize="@dimen/TextSize_Hint" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <EditText
                        android:id="@+id/pass_SignUP_ET"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignBottom="@+id/imageView_passwordIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imageView_passwordIcon"
                        android:background="@color/editTextBG"
                        android:hint="@string/passwordHint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textSize="@dimen/TextSize_Hint" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayout3"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <EditText
                        android:id="@+id/pass_Confirm_SignUp_ET"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignBottom="@+id/imageView_passwordIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imageView_passwordIcon"
                        android:background="@color/editTextBG"
                        android:hint="Confirm Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:textSize="@dimen/TextSize_Hint" />


                </RelativeLayout>

                <Button
                    android:id="@+id/button_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout4"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:text="Sign Up"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/button_signUp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layerType="software"
                    android:src="@drawable/dash" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="or sign up with"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/facebook_icon_btn_for_SignUp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/facebookBlue"
                        android:padding="10dp"
                        android:src="@drawable/img_facebook" />

                    <ImageView
                        android:id="@+id/google_icon_for_SignUp_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/googleRed"
                        android:padding="10dp"
                        android:src="@drawable/img_googleplus" />

                </LinearLayout>

                <TextView
                    android:id="@+id/signIn_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/googleRed"
                    android:layout_marginBottom="10dp"
                    android:text="have an account? Sign in" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>